--- a/challenge_2/package.json
+++ b/challenge_2/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "express-json-csv": "0.0.3"
   }
 }
